syntax = "proto3";

option go_package = "./notifications";


message Empty {}

message Notification {
    string id = 1;
    string title = 2;
    string content = 3;
    uint64 time_stamp = 4;  
}

message NotificationID{
    string id = 1;
}


message Notifications {
    repeated Notification notification_list = 1;
}

service NotificationService {
    rpc GetAllNotifications (Empty) returns (Notifications) {}
    rpc AddNotifications (Notification) returns (Notifications) {}
    rpc RemoveNotifications (NotificationID) returns (Empty) {}
}